@@ -30,6 +30,9 @@ function rubine_theme_options() {
 function rubine_default_options() {
 
 	$default_options = array(
+		'header_tagline'					=> false,
+		'custom_header_link'				=> '',
+		'custom_header_hide'				=> false,
 		'layout' 							=> 'right-sidebar',
 		'footer_icons'						=> false,
 		'deactivate_google_fonts'			=> false,
