@@ -7,6 +7,7 @@ Version 1.2.1
 [added] basic support for wooCommerce
 [added] support for ThemeZee Breadcrumbs plugin
 [added] email icon to social menu
+[added] custom header image settings
 
 Version 1.2.0
 -----------------------------------
